Ensure custom logo is visible

--- a/resources/sass/components/global-header.scss
+++ b/resources/sass/components/global-header.scss
@@ -142,6 +142,7 @@
 }
 
 .global-header .white-label-logo {
+    width: 100%;
     max-height: 32px;
     max-width: 280px;
 }
